--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "marked": "^16.1.2",
+    "sql.js": "^1.13.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
